fix: horizontal scroll on mobile

--- a/src/components/CardExpertise/CardExpertise.scss
+++ b/src/components/CardExpertise/CardExpertise.scss
@@ -14,15 +14,16 @@
     margin-bottom: 1rem;
     text-align: center;
 
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 800px) {
       flex-direction: column;
     }
 
     h3 {
-      font-size: min(9vw, 2rem);
+      font-size: min(8vw, 2rem);
       font-weight: bold;
       display: flex;
       justify-content: center;
+      align-items: center;
 
       @media screen and (max-width: 500px) {
         flex-direction: column;
@@ -47,10 +48,6 @@
     flex-wrap: wrap;
     gap: 0.75rem;
     margin-bottom: 1rem;
-
-    @media screen and (max-width: 500px) {
-      justify-content: space-evenly;
-    }
   }
 
   .links {
