--- a/src/components/CardProject/CardProject.scss
+++ b/src/components/CardProject/CardProject.scss
@@ -35,6 +35,10 @@
     font-size: 2rem;
   }
 
+  .description {
+    text-align: justify;
+  }
+
   .accent-color {
     color: var(--clr-primary-500);
   }
