--- a/src/routes/projects/Projects.scss
+++ b/src/routes/projects/Projects.scss
@@ -3,9 +3,13 @@
 
   .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2rem;
+    grid-template-columns: 1fr 1fr 1fr;
     margin-bottom: 2rem;
+
+    @media screen and (max-width: 1000px) {
+      grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+    }
   }
 
   .action-links {
