--- a/src/routes/work-experience/WorkExperience.scss
+++ b/src/routes/work-experience/WorkExperience.scss
@@ -1,22 +1,22 @@
 .work-experience-page {
   $breakpoint-layout-shift: 1050px;
-  $left-space: min(5vw, 1rem);
+  $left-space: min(5vw, 1.75rem);
 
-  margin-top: 1rem;
   border-left: 3px solid var(--clr-primary-500);
   padding-left: $left-space;
-  margin-left: $left-space;
-  position: relative;
+  padding-right: 0.5rem;
+  margin-left: 0.5rem;
 
   .work-exp {
     position: relative;
+    width: 100%;
 
     &:not(:last-child) {
       margin-bottom: 3rem;
     }
 
     &--icon {
-      $size: min(7vw, 45px);
+      $size: min(7vw, 40px);
 
       position: absolute;
       left: calc(-1 * $left-space);
@@ -69,12 +69,16 @@
         column-gap: 1rem;
 
         &:not(:last-child) {
-          margin-bottom: 1.25rem;
+          margin-bottom: 0.5rem;
         }
 
         @media screen and (max-width: $breakpoint-layout-shift) {
           grid-template-columns: 1fr;
           margin-bottom: 1rem;
+
+          &:not(:last-child) {
+            margin-bottom: 1.25rem;
+          }
         }
 
         img {
